--- a/data-science.html
+++ b/data-science.html
@@ -277,12 +277,12 @@ Scientist ? Assistant Director drives forward the Business Value Creation...</p>
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply online for the job of Fraud Junior Data Scientist at The Hut Group.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crisistextline.workable.com/j/E04B7C7AEE?viewed=true'>Data Scientist, Behavioral Science Specialist ... - Crisis Text Line - Jobs</a></h5> 
+<h5><a href='https://crisistextline.workable.com/j/E04B7C7AEE?viewed=true'>Data Scientist, Behavioral Science Specialist ... - Crisis Text Line - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 17, 2019 ... Crisis Text Line is looking for a Data Scientist with experience in Behavioral 
 Science (?Behavioral Data Scientist?) to support our three core operational?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/crossover-health/job/o8Cuafw8'>Crossover Health Careers - Data Scientist</a></h5> 
+<h5><a href='https://jobs.jobvite.com/crossover-health/job/o8Cuafw8'>Crossover Health Careers - Data Scientist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -290,7 +290,7 @@ Science (?Behavioral Data Scientist?) to support our three core operational?...<
 <p><span class="badge badge-light">New York, United States</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/askmediagroup/jobs/4365031002'>Job Application for Senior Data Scientist at Ask Media Group</a></h5> 
+<h5><a href='https://boards.greenhouse.io/askmediagroup/jobs/4365031002'>Job Application for Senior Data Scientist at Ask Media Group</a></h5> 
 <p><span class="badge badge-light">Oakland, CA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -332,7 +332,7 @@ Science (?Behavioral Data Scientist?) to support our three core operational?...<
 <p><span class="badge badge-light">Santa Barbara</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://fractalanalytics.applytojob.com/apply/fqUEsu3dQ7/Data-Scientist-China'>Data Scientist ,China - Fractal Analytics - Career Page</a></h5> 
+<h5><a href='http://fractalanalytics.applytojob.com/apply/fqUEsu3dQ7/Data-Scientist-China'>Data Scientist ,China - Fractal Analytics - Career Page</a></h5> 
 <p><span class="badge badge-light">Shanghai Shanghai, China</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -362,7 +362,7 @@ Science (?Behavioral Data Scientist?) to support our three core operational?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/criteo/37aade70-1f4f-494a-89bb-0ae1775109e2/apply'>Criteo - Product Data Scientist - Analytics</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/criteo/37aade70-1f4f-494a-89bb-0ae1775109e2/apply'>Criteo - Product Data Scientist - Analytics</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 13, 2019 ... Product Data Scientist - Analytics. Paris, France. Product. Permanent. Submit 
 your application. LinkedIn profile. Loading. Apply with Linkedin. Profile added.</p>
@@ -378,7 +378,7 @@ intelligent, learning algorithm. The algorithm will ingest market analytics and?
 Engineering. full-time. Submit your application. Resume/CV. ATTACH RESUME/
 ?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/perpetualabs.com/e3c1df80-de35-4f78-8ae7-2dd3f6ea79be/apply'>Perpetua Labs - Data Scientist, Product - Toronto</a></h5> 
+<h5><a href='https://jobs.lever.co/perpetualabs.com/e3c1df80-de35-4f78-8ae7-2dd3f6ea79be/apply'>Perpetua Labs - Data Scientist, Product - Toronto</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 16, 2019 ... Data Scientist, Product - Toronto. Toronto. Product. Full-time. Submit your 
 application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
@@ -387,7 +387,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">Moscow</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/DataProphet/743999692100356-junior-data-scientist'>DataProphet Junior Data Scientist | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/DataProphet/743999692100356-junior-data-scientist'>DataProphet Junior Data Scientist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Cape Town Cape Town South Africa</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
