--- a/data-analyst.html
+++ b/data-analyst.html
@@ -75,7 +75,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hugo-and-cat-limited.workable.com/j/629A753D6B'>Hugo & Cat Limited - Jobs: Data and SEO Analyst (Contract / Contract to Perm) - Apply online</a></h5> 
+<h5><a href='https://hugo-and-cat-limited.workable.com/j/629A753D6B'>Hugo & Cat Limited - Jobs: Data and SEO Analyst (Contract / Contract to Perm) - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -115,7 +115,7 @@
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/medidata-solutions/job/oQfDafwC'>Medidata Solutions Careers - Sales Compensation Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/medidata-solutions/job/oQfDafwC'>Medidata Solutions Careers - Sales Compensation Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -170,7 +170,7 @@ deriving value from sparse data to auction theory and game theory all with the?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=o4rAafwZ&__jvst=Employee+Referral&__jvsd=sUzQygwC&__jvsc=Twitter&bid=ntQQUKwi'>Premier Research Careers - Senior Biostatistician</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=o4rAafwZ&__jvst=Employee+Referral&__jvsd=sUzQygwC&__jvsc=Twitter&bid=ntQQUKwi'>Premier Research Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-26</p>
 <hr/>
@@ -197,7 +197,7 @@ planning and analysis (FP&A) integrated analytics team, maintain responsibility?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://605.workable.com/jobs/1042296'>Data Analyst - Apply online - 605 - Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://605.workable.com/jobs/1042296'>Data Analyst - Apply online - 605 - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Apply online for the job of Data Analyst at 605. ... Data Analyst. Data Analyst. 
 Syosset, New York, United States ? Data Solutions. Description. ABOUT 605.</p>
@@ -406,7 +406,7 @@ Stuart.</p>
 <p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://ahsw.referrals.selectminds.com/jobs/cardiovascular-data-analyst-per-diem-day-shift-16442'>Cardiovascular Data Analyst, Per-Diem, Day Shift - Adventist Health Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ahsw.referrals.selectminds.com/jobs/cardiovascular-data-analyst-per-diem-day-shift-16442'>Cardiovascular Data Analyst, Per-Diem, Day Shift - Adventist Health Careers</a></h5> 
 <p><span class="badge badge-light">Los Angeles California</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
